# browser-info

./: Cargo.toml  LICENSE  README.md
.claude/: settings.local.json
.github/workflows/: rust.yml
benches/: performance.rs
examples/: basic_usage.rs
src/: browser_detection.rs  error.rs  lib.rs  url_extraction.rs
src/platform/: chrome_devtools.rs  macos.rs  mod.rs  windows.rs
src/platform/scripts/: macos_get_url.scpt  windows_get_url.ps1
