[package]
name = "browser-info"
version = "0.1.0"
edition = "2024"
authors = ["Katy / frkavka"]
description = "Cross-platform(planned) library retrieving active browser URL and detailed information"
license = "MIT"
repository = "https://github.com/frkavka/browser-info"
documentation = "https://docs.rs/browser-info"
homepage = "https://github.com/frkavka/browser-info"
keywords = ["browser", "url", "automation", "window", "cross-platform"]
categories = ["os", "api-bindings", "development-tools"]
readme = "README.md"

[dependencies]
# To retrieve the active window
active-win-pos-rs = "0.9"
reqwest = { version = "0.11", features = ["json"], optional = true }
tokio = { version = "1.0", features = ["full"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[features]
default = ["devtools"]
devtools = ["reqwest", "tokio"]


[target.'cfg(windows)'.dependencies]
# For Windows
winapi = { version = "0.3", features = [
    "winuser",           # ユーザーインターフェース（キーボード操作等）
    "processthreadsapi", # プロセス・スレッド操作
    "psapi",            # プロセス情報取得
    "impl-default",     # デフォルト実装
] }

[target.'cfg(target_os = "macos")'.dependencies]
# For Mac(unimplemented)
# objc = "0.2"
# cocoa = "0.24"

[target.'cfg(target_os = "linux")'.dependencies]
# For Linux(unimplemented)
# x11 = "2.18"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
criterion = "0.5"

[[bench]]
name = "performance"
harness = false

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "monitor_browser"
path = "examples/monitor_browser.rs"